// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupClientProgress #authenticate: result 1`] = `
Array [
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 0n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 0n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 100,
    "progressCurrent": 100n,
    "progressMax": 100n,
    "speed": 0,
  },
]
`;

exports[`BackupClientProgress #createBackup: result 1`] = `
Array [
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "progressCurrent": 0n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "progressCurrent": 75n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "progressCurrent": 100n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 50n,
    "newFileCount": 1,
    "newFileSize": 100n,
    "progressCurrent": 100n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 50n,
    "newFileCount": 1,
    "newFileSize": 100n,
    "progressCurrent": 175n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 50n,
    "newFileCount": 1,
    "newFileSize": 100n,
    "progressCurrent": 250n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 50n,
    "newFileCount": 1,
    "newFileSize": 100n,
    "progressCurrent": 300n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 150n,
    "newFileCount": 2,
    "newFileSize": 300n,
    "progressCurrent": 300n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 150n,
    "newFileCount": 2,
    "newFileSize": 300n,
    "progressCurrent": 375n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 150n,
    "newFileCount": 2,
    "newFileSize": 300n,
    "progressCurrent": 450n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 150n,
    "newFileCount": 2,
    "newFileSize": 300n,
    "progressCurrent": 525n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 150n,
    "newFileCount": 2,
    "newFileSize": 300n,
    "progressCurrent": 600n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 150n,
    "newFileCount": 2,
    "newFileSize": 300n,
    "progressCurrent": 600n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 600n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 675n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 750n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 825n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 900n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 975n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 300n,
    "newFileCount": 3,
    "newFileSize": 600n,
    "progressCurrent": 1000n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1000n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1075n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1150n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1225n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1300n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1375n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1450n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 500n,
    "newFileCount": 4,
    "newFileSize": 1000n,
    "progressCurrent": 1500n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1500n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1575n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1650n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1725n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1800n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1875n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 1950n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 2025n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 2100n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 750n,
    "newFileCount": 5,
    "newFileSize": 1500n,
    "progressCurrent": 2100n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 1350n,
    "newFileCount": 6,
    "newFileSize": 2100n,
    "progressCurrent": 2100n,
    "progressMax": 0n,
    "speed": Any<Number>,
  },
]
`;

exports[`BackupClientProgress #executeCommand: result 1`] = `
Array [
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 0n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 0n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 100,
    "progressCurrent": 100n,
    "progressMax": 100n,
    "speed": 0,
  },
]
`;

exports[`BackupClientProgress #getFileList: result 1`] = `
Array [
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 100n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 300n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 600n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 1000n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 1500n,
    "speed": 0,
  },
  Object {
    "compressedFileSize": 0n,
    "fileCount": 0,
    "fileSize": 0n,
    "newCompressedFileSize": 0n,
    "newFileCount": 0,
    "newFileSize": 0n,
    "percent": 0,
    "progressCurrent": 0n,
    "progressMax": 1500n,
    "speed": 0,
  },
]
`;
